# nav2_experimental_planner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plan.md
benchmarks/nav2_diffusion_benchmarks/: CMakeLists.txt  README.md  package.xml
benchmarks/nav2_diffusion_benchmarks/scenarios/: narrow_doorway.yaml  simple_corridor.yaml
benchmarks/nav2_diffusion_benchmarks/src/: aggregate.cpp  benchmark_runner_node.cpp  collision_metrics.cpp  metrics.cpp  report.cpp  run_recorder.cpp  scenario.cpp  scores.cpp
benchmarks/nav2_diffusion_benchmarks/test/: test_aggregate.cpp  test_collision_metrics.cpp  test_metrics.cpp  test_report.cpp  test_run_recorder.cpp  test_scenario.cpp  test_scores.cpp
benchmarks/nav2_planner_benchmarks/: CMakeLists.txt  README.md  package.xml
benchmarks/nav2_planner_benchmarks/src/: battle_trace.cpp  controller_benchmark.cpp  planner_benchmark.cpp
classical_planners/nav2_dstar_lite_planner/: CMakeLists.txt  README.md  nav2_dstar_lite_planner_plugin.xml  package.xml
classical_planners/nav2_dstar_lite_planner/src/: dstar_lite_planner.cpp
classical_planners/nav2_dstar_lite_planner/test/: test_dstar_lite_planner.cpp
classical_planners/nav2_jps_planner/: CMakeLists.txt  README.md  nav2_jps_planner_plugin.xml  package.xml
classical_planners/nav2_jps_planner/src/: jps_planner.cpp
classical_planners/nav2_jps_planner/test/: test_jps_planner.cpp
classical_planners/nav2_rrt_planner/: CMakeLists.txt  README.md  nav2_rrt_planner_plugin.xml  package.xml
classical_planners/nav2_rrt_planner/src/: rrt_connect_planner.cpp  rrt_star_planner.cpp
classical_planners/nav2_rrt_planner/test/: test_rrt_connect_planner.cpp  test_rrt_star_planner.cpp
classical_planners/nav2_visibility_graph_planner/: CMakeLists.txt  README.md  nav2_visibility_graph_planner_plugin.xml  package.xml
classical_planners/nav2_visibility_graph_planner/src/: visibility_graph_planner.cpp
classical_planners/nav2_visibility_graph_planner/test/: test_visibility_graph_planner.cpp
generative/nav2_diffusion_bringup/: CMakeLists.txt  README.md  package.xml
generative/nav2_diffusion_bringup/config/: fastdds_udp_localhost.xml
generative/nav2_diffusion_bringup/foxglove/: nav2_diffusion_layout.json
generative/nav2_diffusion_bringup/launch/: foxglove.launch.py  tb3_gazebo_diffusion.launch.py  tb3_gazebo_mission.launch.py  tb3_loopback_diffusion.launch.py
generative/nav2_diffusion_bringup/params/: ara_star_planner_example.yaml  diffusion_controller_example.yaml  diffusion_global_planner_example.yaml  dstar_lite_planner_example.yaml  jps_planner_example.yaml  lazy_theta_star_planner_example.yaml  nav2_diffusion_tb3.yaml  nd_controller_example.yaml  prm_planner_example.yaml  rrt_planner_example.yaml  vfh_controller_example.yaml  visibility_graph_planner_example.yaml
generative/nav2_diffusion_bringup/scripts/: sim_mission.py
generative/nav2_diffusion_bringup/test/: test_sim_mission.py
generative/nav2_diffusion_global_planner/: README.md  nav2_diffusion_global_planner_plugin.xml  package.xml
generative/nav2_diffusion_global_planner/src/: diffusion_global_planner.cpp
generative/nav2_diffusion_global_planner/test/: test_diffusion_global_planner.cpp
generative/nav2_diffusion_msgs/: README.md  package.xml
generative/nav2_diffusion_rviz_plugins/: CMakeLists.txt  package.xml
generative/nav2_diffusion_rviz_plugins/src/: candidate_markers.cpp  candidate_markers_node.cpp  safety_state_marker.cpp
generative/nav2_diffusion_rviz_plugins/test/: test_candidate_markers.cpp  test_safety_state_marker.cpp
generative/nav2_diffusion_sim/: CMakeLists.txt  README.md  package.xml
generative/nav2_diffusion_sim/launch/: tb3_gazebo_course.launch.py
generative/nav2_diffusion_sim/maps/: centred.pgm  centred.yaml  gap.pgm  gap.yaml  slalom.pgm  slalom.yaml
generative/nav2_diffusion_sim/nav2_diffusion_sim/: gen_courses.py
generative/nav2_diffusion_sim/test/: test_copyright.py  test_flake8.py  test_gen_courses.py  test_pep257.py
generative/nav2_diffusion_sim/worlds/: centred.sdf.xacro  gap.sdf.xacro  slalom.sdf.xacro
generative/nav2_diffusion_training/: package.xml  setup.cfg  setup.py
generative/nav2_diffusion_training/nav2_diffusion_training/: __init__.py  dagger.py  (+7 more)
nav2_diffusion_benchmarks/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_benchmarks/src/: metrics.cpp
nav2_diffusion_benchmarks/test/: test_metrics.cpp
nav2_diffusion_bringup/: README.md  package.xml
nav2_diffusion_bringup/launch/: tb3_gazebo_diffusion.launch.py  tb3_loopback_diffusion.launch.py
nav2_diffusion_bringup/params/: diffusion_controller_example.yaml  nav2_diffusion_tb3.yaml  rrt_planner_example.yaml
nav2_diffusion_controller/: README.md  package.xml
nav2_diffusion_controller/src/: diffusion_controller.cpp
nav2_diffusion_controller/test/: test_diffusion_controller_integration.cpp
nav2_diffusion_core/: CMakeLists.txt  README.md  package.xml
nav2_diffusion_core/src/: fan_path_model.cpp  fan_rollout_model.cpp  path.cpp  scoring.cpp
nav2_diffusion_core/test/: test_fan_path_model.cpp  test_fan_rollout_model.cpp  test_path.cpp  test_scoring.cpp
nav2_diffusion_msgs/: CMakeLists.txt  package.xml
nav2_diffusion_msgs/msg/: SafetyState.msg  TrajectoryCandidate.msg  TrajectoryCandidates.msg
nav2_diffusion_onnx/: CMakeLists.txt  README.md  nav2_diffusion_onnx_plugin.xml  package.xml
nav2_diffusion_onnx/scripts/: make_costmap_path_model.py  make_path_model.py  make_test_model.py
nav2_diffusion_onnx/src/: onnx_path_model.cpp  onnx_trajectory_model.cpp
nav2_diffusion_onnx/test/: test_onnx_path_model.cpp  test_onnx_trajectory_model.cpp
nav2_lazy_theta_star_planner/: nav2_lazy_theta_star_planner_plugin.xml  package.xml
nav2_planner_benchmarks/: CMakeLists.txt  README.md  package.xml
nav2_planner_benchmarks/src/: controller_benchmark.cpp  planner_benchmark.cpp
nav2_prm_planner/: package.xml
reactive_controllers/nav2_nd_controller/: CMakeLists.txt  README.md  nav2_nd_controller_plugin.xml  package.xml
reactive_controllers/nav2_vfh_controller/: CMakeLists.txt  README.md  package.xml
(+256 files in other folders)
