<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_diffusion_benchmarks</name>
  <version>0.0.0</version>
  <description>
    Benchmark scenarios, metrics, and reports for nav2_diffusion_planner. Lets
    DiffusionController be compared fairly against MPPI / RPP / Smac on the same
    scenarios. See docs/benchmarking.md.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_diffusion_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
