<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_diffusion_controller</name>
  <version>0.5.0</version>
  <description>
    Nav2 Controller plugin (v0.1 skeleton) for generative local planning:
    proposes candidate trajectories, validates them with a deterministic safety
    gate, and stops as a fallback when no safe candidate exists. See
    docs/architecture.md section 3.2 (Mode A) and docs/safety.md.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_diffusion_core</depend>
  <depend>nav2_diffusion_safety</depend>
  <depend>nav2_diffusion_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>nav2_regulated_pure_pursuit_controller</test_depend>
  <test_depend>nav2_controller</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/nav2_diffusion_controller_plugin.xml" />
  </export>
</package>
