<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_diffusion_onnx</name>
  <version>0.1.0</version>
  <description>
    Optional ONNX Runtime inference backend for nav2_diffusion_planner: an
    OnnxTrajectoryModel implementing nav2_diffusion_core::TrajectoryModel
    (docs/architecture.md sections 5.2/7.2). Requires onnxruntime to be findable
    by CMake (onnxruntime_vendor, a system install, or CMAKE_PREFIX_PATH); it is
    not built by the default CI for that reason.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_diffusion_core</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
