<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_dstar_lite_planner</name>
  <version>0.11.0</version>
  <description>
    D* Lite incremental-search global planner for Nav2
    (nav2_core::GlobalPlanner). Upstream Nav2 ships only one-shot search planners
    (NavFn, Smac, Theta*) that replan from scratch; this adds the incremental
    family: D* Lite caches g/rhs values from the goal-rooted search and repairs
    only the vertices whose costs change between cycles. Part of
    Nav2PlannerBattle: planners not in upstream Nav2.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/nav2_dstar_lite_planner_plugin.xml" />
  </export>
</package>
