<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_jps_planner</name>
  <version>0.9.0</version>
  <description>
    Jump Point Search (JPS) global planner for Nav2
    (nav2_core::GlobalPlanner). JPS is an optimal speed-up of 8-connected grid A*
    on uniform-cost grids that jumps over symmetric path segments and expands far
    fewer nodes. Upstream Nav2's grid planners (NavFn, Smac) do not include JPS.
    Part of nav2_experimental_planner: planners not in upstream Nav2.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/nav2_jps_planner_plugin.xml" />
  </export>
</package>
