<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_visibility_graph_planner</name>
  <version>0.11.0</version>
  <description>
    Visibility-graph global planner for Nav2 (nav2_core::GlobalPlanner). Reasons
    about obstacle geometry rather than grid cells: graph vertices are obstacle
    convex corners (plus start and goal), edges connect mutually visible vertices,
    and an A* search returns a piecewise-straight corner-hugging route. Upstream
    Nav2 has no visibility-graph planner. Part of nav2_experimental_planner:
    planners not in upstream Nav2.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/nav2_visibility_graph_planner_plugin.xml" />
  </export>
</package>
