<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_diffusion_bringup</name>
  <version>0.11.0</version>
  <description>
    Example Nav2 launch files and parameters for nav2_experimental_planner,
    including a headless loopback closed-loop demo driven by the
    DiffusionController. See docs/getting_started and docs/simulation.md.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_minimal_tb3_sim</exec_depend>
  <exec_depend>nav2_diffusion_controller</exec_depend>
  <exec_depend>nav2_diffusion_rviz_plugins</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- In-launch mission node (sim_mission.py) for the Gazebo benchmark -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <!-- Optional: only needed for the Foxglove visualization launch -->
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
