<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_diffusion_msgs</name>
  <version>0.9.0</version>
  <description>
    Message and service definitions for nav2_experimental_planner: future trajectory
    candidates, best trajectory, safety state, and diagnostics. See
    docs/architecture.md sections 4.3 (Output Contract) and 4.4 (Trajectory
    Representation), and docs/safety.md section 8.3 (Safety State Machine).
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
